--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.pefoley.weedroid.app.SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
+        <activity android:name="com.pefoley.weedroid.app.SettingsActivity"
+            />
     </application>
 
 
