--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.pefoley.weedroid.app.SettingsActivity"
-            />
+        <activity android:name="com.pefoley.weedroid.app.SettingsActivity" />
     </application>
-
 
 
 </manifest>
